--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -88,7 +88,7 @@ jobs:
           repository: thegoodparty/test-automation
           token: ${{ secrets.GH_PAT_TEST }}
           path: test-automation
-          ref: fix_pro_upgrade_test
+          ref: e2e_website_tests
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
