--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-table": "^8.21.3",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
