--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "tailwindcss": "^3.2.1",
     "typescript": "^5.9.3",
     "typewriter-effect": "^2.22.0",
+    "uuidv7": "^1.1.0",
     "validator": "^13.15.20"
   },
   "devDependencies": {
