--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@newrelic/browser-agent": "^1.306.0",
+    "@newrelic/publish-sourcemap": "^5.1.4",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
     "@segment/analytics-next": "^1.81.1",
@@ -55,6 +56,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^4.1.0",
     "es-toolkit": "^1.32.0",
+    "fast-glob": "^3.3.3",
     "fuse.js": "^7.1.0",
     "goodparty-styleguide": "1.3.31",
     "hamburger-react": "^2.5.2",
@@ -69,6 +71,7 @@
     "next": "^15.5.9",
     "next-pwa": "^5.6.0",
     "object-to-formdata": "^4.5.1",
+    "p-map": "^7.0.4",
     "path-to-regexp": "^8.2.0",
     "query-string": "^9.1.0",
     "quill": "^2.0.3",
