--- a/.github/workflows/test-preview-deploy.yml
+++ b/.github/workflows/test-preview-deploy.yml
@@ -19,12 +19,6 @@ jobs:
           cache: npm
 
       - run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
       - run: npm install --global vercel
-
-      - run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
+      - run: vercel pull --yes --environment=preview --git-branch=${{ github.head_ref}} --token=${{ secrets.VERCEL_TOKEN }}
       - run: vercel deploy --token=${{ secrets.VERCEL_TOKEN }}
