[ENG-4387] - Add TypeScript type annotations and interfaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "plugins": [
@@ -15,9 +11,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@shared/*": [
-        "app/shared/*"
-      ]
+      "@shared/*": ["app/shared/*"]
     },
     "jsx": "preserve",
     "allowJs": true,
@@ -50,8 +44,5 @@
     ".next/types/**/*.ts",
     "types/**/*.d.ts"
   ],
-  "exclude": [
-    "node_modules",
-    ".next"
-  ]
+  "exclude": ["node_modules", ".next"]
 }
