--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lint:fix": "next lint --fix",
     "start": "next build && next start",
     "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "types": "npx tsc"
   },
   "dependencies": {
@@ -111,6 +113,8 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^3.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
@@ -118,6 +122,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/sanitize-html": "^2.16.0",
     "@types/validator": "^13.15.4",
+    "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "csv-writer": "^1.6.0",
@@ -126,11 +131,14 @@
     "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "jsdom": "^28.0.0",
     "madge": "^8.0.0",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
     "postcss": "^8.4.23",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "vite-tsconfig-paths": "^6.0.5",
+    "vitest": "^4.0.18"
   },
   "engines": {
     "node": "22.x"
