--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lint:fix": "next lint --fix",
     "start": "next build && next start",
     "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "types": "npx tsc"
   },
   "dependencies": {
@@ -111,7 +113,6 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^3.1.0",
-    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/js-cookie": "^3.0.6",
@@ -136,6 +137,7 @@
     "p-limit": "^6.2.0",
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
+    "vite-tsconfig-paths": "^6.0.5",
     "vitest": "^4.0.18"
   },
   "engines": {
