--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,5 +44,5 @@
     ".next/types/**/*.ts",
     "types/**/*.d.ts"
   ],
-  "exclude": ["node_modules", ".next"]
+  "exclude": ["node_modules", ".next", "e2e-tests"]
 }
