Clean up /test-automation migration.
* Remove duplicated license from e2e that's in root
* Move e2e github workflow to root workflow
* Update launch file path for e2e debugging

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
           node-version-file: .nvmrc
           cache: npm
       - run: npm ci
+      - run: npm ci --prefix e2e-tests
+      - run: npx tsc --noEmit --project e2e-tests/tsconfig.json
+      - run: npm run lint --prefix e2e-tests
       - run: npx next typegen
       - run: npx tsc --noEmit
       - run: npm run test
