--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,9 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Playwright QA Tests",
-			"program": "${workspaceFolder}/node_modules/@playwright/test/cli.js",
+			"program": "${workspaceFolder}/e2e-tests/node_modules/@playwright/test/cli.js",
 			"args": ["test", "--project=QA"],
+			"cwd": "${workspaceFolder}/e2e-tests",
 			"env": {
 				"BASE_URL": "https://qa.goodparty.org",
 				"PROJECT_ENV": "qa"
@@ -18,8 +19,9 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Playwright Default Tests",
-			"program": "${workspaceFolder}/node_modules/@playwright/test/cli.js",
+			"program": "${workspaceFolder}/e2e-tests/node_modules/@playwright/test/cli.js",
 			"args": ["test"],
+			"cwd": "${workspaceFolder}/e2e-tests",
 			"env": {
 				"BASE_URL": "http://localhost:4000"
 			},
