--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "libphonenumber-js": "^1.10.14",
     "marked": "^14.1.2",
     "match-sorter": "^6.3.1",
+    "msw": "^2.12.8",
     "next": "^15.5.9",
     "next-pwa": "^5.6.0",
     "object-to-formdata": "^4.5.1",
+    "ofetch": "^1.5.1",
     "p-map": "^7.0.4",
     "path-to-regexp": "^8.2.0",
     "query-string": "^9.1.0",
