--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "deploy-prod": "git checkout master  && eb deploy",
     "detect-circular-dependencies": "npx madge --circular --warning app",
     "format": "prettier -c .",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint . --quiet && prettier --check .",
+    "lint:fix": "eslint . --quiet --fix && prettier --write .",
     "start": "next build && next start",
     "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
     "test": "vitest run",
     "test:e2e": "cd e2e-tests && npx playwright install chromium && npx playwright test tests/ --reporter=list",
-    "lint:e2e": "cd e2e-tests && npx biome check --diagnostic-level=error",
     "test:watch": "vitest",
     "types": "npx tsc"
   },
@@ -116,7 +115,6 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/client-sqs": "^3.968.0",
-    "@biomejs/biome": "2.3.8",
     "@playwright/test": "^1.48.1",
     "@slack/web-api": "^7.13.0",
     "@stylistic/eslint-plugin": "^3.1.0",
