e2e test for poll individual message phone numbers
e2e test for poll individual message phone numbers

--- a/e2e-tests/.env.example
+++ b/e2e-tests/.env.example
@@ -2,3 +2,4 @@ BASE_URL=https://qa.goodparty.org/
 TEST_USER_ADMIN=some-admin@goodparty.org
 TEST_USER_ADMIN_PASSWORD=password
 SLACK_BOT_TOKEN=put_token_here
+SERVE_ANALYZE_S3_BUCKET=serve-analyze-data-dev
