--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -417,3 +417,130 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  visual-tests:
+    name: Visual Diff Tests (Non-blocking)
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: check-pr-status
+    if: needs.check-pr-status.outputs.pr-open == 'true'
+    continue-on-error: true
+    permissions:
+      actions: read
+      contents: read
+      pull-requests: write
+      id-token: write
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v5
+        with:
+          role-to-assume: arn:aws:iam::333022194791:role/web-app-e2e-tests
+          aws-region: us-west-2
+
+      - name: Set deployment URL
+        run: |
+          echo "BASE_URL=${{ github.event.deployment_status.target_url }}" >> "$GITHUB_ENV"
+
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.deployment.sha }}
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+          cache: "npm"
+          cache-dependency-path: package-lock.json
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        working-directory: e2e-tests
+        run: npx playwright install --with-deps chromium
+
+      - name: Run Visual Diff Tests
+        id: run-visual-tests
+        working-directory: e2e-tests
+        # To generate initial baselines, set UPDATE_VISUAL_BASELINES to "true" below,
+        # push, download the visual-baselines artifact, commit the PNGs, then set it back to "false".
+        run: |
+          if [ "$UPDATE_VISUAL_BASELINES" = "true" ]; then
+            echo "📸 Generating visual baselines (update mode)"
+            npx playwright test --project=visual --update-snapshots
+          else
+            echo "🔍 Comparing against committed baselines"
+            npx playwright test --project=visual
+          fi
+        env:
+          BASE_URL: ${{ env.BASE_URL }}
+          VISUAL_TESTS: "true"
+          UPDATE_VISUAL_BASELINES: "true"  # ← SET TO "false" AFTER COMMITTING BASELINES
+          TEST_USER_ADMIN: ${{ secrets.TEST_USER_ADMIN }}
+          TEST_USER_ADMIN_PASSWORD: ${{ secrets.TEST_USER_ADMIN_PASSWORD }}
+
+      - name: Upload visual baselines (for initial generation)
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: visual-baselines-${{ github.run_id }}-${{ github.run_attempt }}
+          path: e2e-tests/tests/__visual_snapshots__/
+          retention-days: 30
+
+      - name: Upload visual diff artifacts
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: visual-diff-report-${{ github.run_id }}-${{ github.run_attempt }}
+          path: |
+            e2e-tests/playwright-report
+            e2e-tests/test-results
+          retention-days: 30
+
+      - name: Comment PR with visual test results
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const outcome = '${{ steps.run-visual-tests.outcome }}';
+            const icon = outcome === 'success' ? '✅' : '⚠️';
+            const deploymentUrl = '${{ env.BASE_URL }}';
+
+            const { data: prs } = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              commit_sha: context.payload.deployment.sha
+            });
+
+            if (prs.length === 0) {
+              console.log('No PR found for this deployment, skipping comment');
+              return;
+            }
+
+            const prNumber = prs[0].number;
+
+            let body = `## ${icon} Visual Diff Tests (Non-blocking)\n\n`;
+            body += `**Preview Deployment:** ${deploymentUrl}\n\n`;
+
+            if (outcome === 'success') {
+              body += `No visual regressions detected — UI matches the committed baselines.\n\n`;
+            } else {
+              body += `Visual differences were detected. Download the **visual-diff-report** artifact from the Actions run to review the screenshot diffs.\n\n`;
+              body += `If this is an **intentional** UI change, update the baselines and commit them:\n`;
+              body += "```bash\n";
+              body += `BASE_URL=${deploymentUrl} npm run test:visual:update\n`;
+              body += `git add e2e-tests/tests/__visual_snapshots__/\n`;
+              body += `git commit -m "chore: update visual baselines"\n`;
+              body += "```\n\n";
+            }
+
+            body += `[View full report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
+
+            await github.rest.issues.createComment({
+              issue_number: prNumber,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: body
+            });
+
