--- a/package.json
+++ b/package.json
@@ -38,11 +38,27 @@
     "@faker-js/faker": "^9.8.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@newrelic/browser-agent": "^1.306.0",
     "@newrelic/publish-sourcemap": "^5.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
     "@segment/analytics-next": "^1.81.1",
@@ -58,27 +74,10 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "es-toolkit": "^1.32.0",
     "fast-glob": "^3.3.3",
     "fuse.js": "^7.1.0",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@radix-ui/react-tooltip": "^1.2.6",
-    "embla-carousel-react": "^8.6.0",
-    "lucide-react": "^0.542.0",
     "hamburger-react": "^2.5.2",
     "intro.js": "^8.3.2",
     "intro.js-react": "^1.0.0",
@@ -86,10 +85,12 @@
     "isomorphic-dompurify": "^2.14.0",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.10.14",
+    "lucide-react": "^0.542.0",
     "marked": "^14.1.2",
     "match-sorter": "^6.3.1",
     "next": "^15.5.9",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "object-to-formdata": "^4.5.1",
     "p-map": "^7.0.4",
     "path-to-regexp": "^8.2.0",
@@ -131,8 +132,8 @@
     "typescript": "^5.9.3",
     "typewriter-effect": "^2.22.0",
     "uuidv7": "^1.1.0",
-    "vaul": "^1.1.2",
     "validator": "^13.15.22",
+    "vaul": "^1.1.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
