--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@aws-sdk/client-sqs": "^3.968.0",
     "@playwright/test": "^1.48.1",
     "@slack/web-api": "^7.13.0",
+    "@storybook/nextjs-vite": "^10.2.10",
     "@stylistic/eslint-plugin": "^3.1.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
