--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,5 +46,5 @@
     ".next/types/**/*.ts",
     "types/**/*.d.ts"
   ],
-  "exclude": ["node_modules", ".next", "e2e-tests"]
+  "exclude": ["node_modules", ".next", "e2e-tests", "styleguide/stories"]
 }
